# pd-rota-update

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  rota_template.csv  update_rota.py
