[project]
name = "pd-rota-update"
version = "0.1.1"
description = "Sync a CSV rota to PagerDuty schedule layers"
requires-python = ">=3.9"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long — handled by formatter
]

[tool.ruff.lint.isort]
force-single-line = true
